feat: added update user profile
