# internal/model/auth_model.go
@@ -14,3 +14,10 @@ type LoginRequest struct {
 	Email    string `json:"email" validate:"required,email,max=100"`
 	Password string `json:"password" validate:"required,max=255"`
 }
+
+type UpdateUserProfileRequest struct {
+	ID       uint   `json:"id" validate:"required"`
+	Name     string `json:"name,omitempty" validate:"max=100"`
+	Password string `json:"password,omitempty" validate:"max=100"`
+	Photo    string `json:"photo,omitempty" validate:"max=255"`
+}
